Unsafe: land the whole getAndBitwise{Or,And,Xor}{Int,Long} family, all eighteen
`overlaycheck-deep` lists every one of these as referenced by stock java.base,
and only `getAndBitwiseOrLong` existed -- so the other seventeen CEASED TO EXIST.
An overlay wins the name, and a member it omits resolves nowhere and surfaces as
a DENYLIST TRAP blaming a list this class is not on. That trap has cost this
project eleven debugging sessions, and adding the one member that traps is how
this family costs a boot each time.

The family was blocked for an arc by something with nothing to do with these
methods: `armPhaseACells` armed phase-A cells for static methods only, so a
`<init>` -- neither static nor virtual -- got no cell, and the tier
`globalBufByRef` short-circuits every constructor into returned 0. These members
were only ever the perturbation that moved batch composition. Fixed in 7f33d5f.

ACQUIRE AND RELEASE SHARE THE PLAIN BODY, correct by being STRONGER rather than
equal: `Magic.cas64` is LDAXR/STLXR, already acquire-on-load and
release-on-store, so the plain form carries at least the ordering either variant
asks for. joe-ng has no one-way barrier intrinsic to emit a weaker form with, and
a weaker form we cannot emit could only be wrong invisibly -- the same reasoning
`VarHandle.setRelease` and the memory-mode accessors already record.

THE INT FORMS OPERATE ON AN 8-BYTE SLOT, a precondition on the CALLER rather than
a detail: `Magic` exposes cas64 and nothing narrower. Exact for an INSTANCE FIELD
(ObjectModel gives each its own 8-byte slot, Baseline.canonInt keeps an int
sign-extended in it) and WRONG for an int ARRAY element, whose scale is 4 -- a
64-bit access there takes the neighbouring element with it, at an address the
exclusive monitor is not even aligned for. Nothing reached does that, and a
narrow-slot caller would not fail, it would corrupt its neighbour.

THE PROBE COVERS ALL EIGHTEEN AND IS BYTE-IDENTICAL TO A HOST CONTROL -- 26 arms,
every one OK, `diff`